# feed_control

./: CMakeLists.txt  sdkconfig.old
main/: CMakeLists.txt  main.c
main/OTA_helper/: OTA_CONFIG.c
main/OTA_helper/include/: OTA_CONFIG.h
main/RS_485_helper/: rs_485.c
main/RS_485_helper/include/: rs_485.h
main/feed_control_helper/: feed_control.c
main/i2c_helper/: i2c_control.c
main/i2c_helper/include/: i2c_control.h
server_certs/: ca_cert.pem
